# remarshal

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  VERSION  appveyor.yml  array.toml  check.sh  compile.sh  example.cbor  example.json  example.msgpack  example.py  example.toml  example.yaml  install.sh  pyproject.toml  remarshal.go  remarshal.py  requirements.txt  setup.py  tests.sh  toml2yaml.go  tox.ini  yaml2toml.go
.github/workflows/: ci.yml  codespell_and_ruff.yml  lint-and-type.yml  lint.yml  lint_python.yml  type.yml
completions/: install.fish  remarshal.bash  remarshal.fish
remarshal/: main.py
src/remarshal/: __init__.py  __main__.py  main.py
tests/: array.json  array.toml  bin.msgpack  bin.yml  bool-null-key.json  bool-null-key.py  bool-null-key.toml  bool-null-key.yaml  colon.json  colon.yaml  context.py  date-yaml-1.1.yaml  date.cbor  date.json  date.toml  date.yaml  datetime-local.json  datetime-local.toml  datetime-local.yaml  datetime-tz.cbor  datetime-tz.json  datetime-tz.msgpack  datetime-tz.toml  datetime-tz.yaml  empty-mapping.toml  empty-mapping.yaml  garbage  lol.yml  long-line-default.yaml  long-line-double-quote.yaml  long-line-gt.yaml  long-line-pipe.yaml  long-line-single-quote.yaml  long-line-slash.yaml  long-line.json  multiline-3.toml  multiline-5.toml  multiline.json  multiline.toml  newline-empty.yaml  (+35 more)
