[tool.poetry]
name = "Remarshal"
version = "0.15.0"
description = "Convert between CBOR, JSON, MessagePack, TOML, and YAML"
authors = ["D. Bohdan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cbor2 = "^5.4"
python-dateutil = "^2.8"
PyYAML = "^6.0"
tomlkit = "^0.11"
u-msgpack-python = "^2.8"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.277"
mypy = "^1.4.1"
types-python-dateutil = "^2.8.19.13"
types-pyyaml = "^6.0.12.10"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
remarshal        = 'remarshal:main'
cbor2cbor        = 'remarshal:main'
cbor2json        = 'remarshal:main'
cbor2msgpack     = 'remarshal:main'
cbor2toml        = 'remarshal:main'
cbor2yaml        = 'remarshal:main'
json2cbor        = 'remarshal:main'
json2json        = 'remarshal:main'
json2msgpack     = 'remarshal:main'
json2toml        = 'remarshal:main'
json2yaml        = 'remarshal:main'
msgpack2cbor     = 'remarshal:main'
msgpack2json     = 'remarshal:main'
msgpack2msgpack  = 'remarshal:main'
msgpack2toml     = 'remarshal:main'
msgpack2yaml     = 'remarshal:main'
toml2cbor        = 'remarshal:main'
toml2json        = 'remarshal:main'
toml2msgpack     = 'remarshal:main'
toml2toml        = 'remarshal:main'
toml2yaml        = 'remarshal:main'
yaml2cbor        = 'remarshal:main'
yaml2json        = 'remarshal:main'
yaml2msgpack     = 'remarshal:main'
yaml2toml        = 'remarshal:main'
yaml2yaml        = 'remarshal:main'
